tests/ui/target_modifiers/incompatible_regparm.error_generated.stderr
error: mixing `-Zregparm` will cause an ABI mismatch
  --> $DIR/incompatible_regparm.rs:12:1
   |
LL | #![crate_type = "lib"]
   | ^
   |
   = help: `-Zregparm` modifies the ABI and Rust crates compiled with different values of this flag cannot be used together safely
   = note: `-Zregparm=1` in this crate is incompatible with `-Zregparm=2` in dependency `wrong_regparm`
   = note: alternatively, use `-Cunsafe-allow-abi-mismatch=regparm` to silence this error
   = note: `#[deny(incompatible_target_modifiers)]` on by default

error: aborting due to 1 previous error

